--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <dimen name="sl_toolbar_size">56dp</dimen>
+
     <dimen name="content_margin">16dp</dimen>
     <dimen name="content_padding">8dp</dimen>
 
