--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#abc502</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#7BB605</color>
+    <color name="colorPrimaryDark">#A5D405</color>
     <color name="colorAccent">#ffffff</color>
 
     <color name="colorPrimaryTrans">#a0673AB7</color>
-    <color name="colorAccentTrans">#abc502</color>
+    <color name="colorAccentTrans">#A5D405</color>
     <color name="colorBlackTrans">#a0000000</color>
 
     <color name="colorGrayLight">#444444</color>
