--- a/app/src/main/res/layout/forgot_password.xml
+++ b/app/src/main/res/layout/forgot_password.xml
@@ -4,6 +4,7 @@
               android:layout_height="match_parent"
               android:layout_margin="@dimen/margin_x"
               android:gravity="center"
+              android:background="@color/about_libraries_primary"
               android:orientation="vertical">
 
     <TextView
@@ -12,7 +13,8 @@
         android:layout_gravity="center"
         android:text="@string/forgot_password"
         android:layout_marginBottom="@dimen/margin_3x"
-        android:textSize="@dimen/text_24"/>
+        android:textSize="@dimen/text_24"
+        />
 
     <TextView
         android:layout_width="wrap_content"
