--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -85,6 +85,11 @@
     <dimen name="card_bottom_info_height">150dp</dimen>
     <dimen name="card_extra_height">20dp</dimen>
 
+    <dimen name="login_button_radius">30dp</dimen>
+    <dimen name="login_button_height">60dp</dimen>
+    <dimen name="login_button_width">300dp</dimen>
+    <dimen name="login_holder_height">25dp</dimen>
+    <dimen name="login_horizontalline_spacing">10dp</dimen>
 
     <dimen name="margin_2x">16dp</dimen>
     <dimen name="padding_2x">16dp</dimen>
