--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       xmlns:app="http://schemas.android.com/apk/res-auto"
-      tools:context=".activities.MainActivity">
+      tools:context=".activities.main">
     <item android:id="@+id/action_shuffle"
           android:title="@string/action_shuffle"
           app:showAsAction="ifRoom"/>
