--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -9,6 +9,7 @@
 	<FrameLayout
 		android:layout_height="match_parent"
 		android:layout_width="match_parent"
+		android:background="@color/primary"
 		android:id="@+id/frag_container"/>
 
 	<RelativeLayout
