--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
 
     <color name="colorPrimary">#00ad79</color>
     <color name="colorPrimaryDark">#00ad79</color>
-    <color name="colorAccent">#ffffff</color>
+    <color name="colorAccent">#00ad79</color>
 
-
+    <color name="bgBackSideColor">#f4f0ff</color>
     <color name="colorPrimaryTrans">#a0673AB7</color>
     <color name="colorAccentTrans">#A5D405</color>
     <color name="colorBlackTrans">#a0000000</color>
@@ -35,4 +35,21 @@
     <color name="color_edittext_hint">#fff</color>
 
     <color name="color_edittext_label">#fff</color>
+
+    <color name = "darkGray">#434343</color>
+    <color name = "gray">#737373</color>
+    <color name = "lightGray">#a7a7a7</color>
+    <color name = "whiteGray">#cecece</color>
+
+    <color name="bgTitleRight">#ffffff</color>
+
+    <color name="bgContent">#ffffff</color>
+    <color name="contentDividerLine">#e0e0e0</color>
+    <color name="contentBadgeTitle">#a9a9a9</color>
+    <color name="titleBadgeTitle">#adafb1</color>
+    <color name="titleBadgeText">#adafb1</color>
+    <color name="mainTextColor">#343d43</color>
+    <color name="btnRequest">#ffbf12</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
